Update .gitignore for VS PyProject/solution files
Regarding #2

--- a/.gitignore
+++ b/.gitignore
@@ -443,3 +443,7 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+# VS PyProject/solution files
+*.pyproj
+*.sln
