--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-cors-headers==3.2.1
 django-filter==2.2.0
 django-heroku==0.3.1
 djangorestframework==3.11.0
+gunicorn==20.0.4
 isort==4.3.21
 lazy-object-proxy==1.4.3
 Markdown==3.1.1
