--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==3.0.3
 django-cors-headers==3.2.1
 django-filter==2.2.0
 djangorestframework==3.11.0
+gunicorn==20.0.4
 lazy-object-proxy==1.4.3
 Markdown==3.1.1
 pytz==2019.3
