--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.2.3
 Django==3.0.3
 django-cors-headers==3.2.1
 django-filter==2.2.0
+django-heroku==0.3.1
 djangorestframework==3.11.0
 gunicorn==20.0.4
 lazy-object-proxy==1.4.3
