--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ gunicorn==20.0.4
 lazy-object-proxy==1.4.3
 Markdown==3.1.1
 pytz==2019.3
+python-jose==3.1.0
 six==1.12.0
 sqlparse==0.3.0
 wrapt==1.11.2
