--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,10 +59,7 @@ jobs:
           command: |
             . venv/bin/activate
             python manage.py test
+            coverage run --source='./api_project','./api_server' manage.py test api_server
           
-      - store_artifacts:
-          path: test-reports
-          destination: test-reports
-
       - codecov/upload:
-          file: {{ coverage_report_filepath }}
+          file: ./.coverage
